--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ version = "0.1.0"
 [dependencies]
 rocket = {version = "0.5.0-rc.1"}
 rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
+diesel = "1.4"
