--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ version = "0.1.0"
 chrono = {version = "0.4"}
 diesel = {version = "1.4", features = ["postgres", "chrono"]}
 rocket = {version = "0.5.0-rc.1"}
+rocket_okapi = {version = "0.8.0-rc.1"}
 rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
