--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ version = "0.1.0"
 
 [dependencies]
 chrono = {version = "0.4", features = ["serde"]}
-diesel = {version = "1.4", features = ["postgres", "chrono"]}
+diesel = {version = "1.4", features = ["postgres", "chrono", "uuidv07"]}
 dotenv = "0.15.0"
 rocket = {version = "0.5.0-rc.1", features = ["json"]}
 rocket_okapi = {version = "0.8.0-rc.1", features = ["swagger"]}
 rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
 schemars = {version = "0.8", features = ["chrono"]}
 serde = {version = "1.0", features = ["derive"]}
+uuid = "0.8"
