--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ version = "0.1.0"
 chrono = {version = "0.4", features = ["serde"]}
 diesel = {version = "1.4", features = ["postgres", "chrono", "uuidv07"]}
 dotenv = "0.15.0"
+flexi_logger = "0.22"
+log = "0.4"
 rocket = {version = "0.5.0-rc.1", features = ["json"]}
 rocket_okapi = {version = "0.8.0-rc.1", features = ["swagger"]}
 rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
