--- a/.github/workflows/crunch42-analysis.yml
+++ b/.github/workflows/crunch42-analysis.yml
@@ -21,33 +21,34 @@
 #
 # If you have any questions or need help contact https://support.42crunch.com
 
-name: "42Crunch REST API Static Security Testing"
+#name: "42Crunch REST API Static Security Testing"
 
 # follow standard Code Scanning triggers
-on:
-  push:
-    branches: [ main ]
-  pull_request:
+#on:
+#  push:
+#    branches: [ main ]
+#  pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
-  schedule:
-    - cron: '39 5 * * 4'
+#    branches: [ main ]
+#  schedule:
+#    - cron: '39 5 * * 4'
 
-jobs:
-  rest-api-static-security-testing:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+#jobs:
+#  rest-api-static-security-testing:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
 
-      - name: 42Crunch REST API Static Security Testing
-        uses: 42Crunch/api-security-audit-action@45cfec5231dc2550ddb05f4be1b6349b8c9d8cf2
-        with:
+#      - name: 42Crunch REST API Static Security Testing
+#        uses: 42Crunch/api-security-audit-action@45cfec5231dc2550ddb05f4be1b6349b8c9d8cf2
+#        with:
           # Please create free account at https://platform.42crunch.com/register
           # Follow these steps to configure API_TOKEN https://docs.42crunch.com/latest/content/tasks/integrate_github_actions.htm
-          api-token: ${{ secrets.CRUNCH_API_TOKEN }}
+#          api-token: ${{ secrets.CRUNCH_API_TOKEN }}
           # Fail if any OpenAPI file scores lower than 75
-          min-score: 75
+#          min-score: 75
           # Upload results to Github code scanning
-          upload-to-code-scanning: true
+#          upload-to-code-scanning: true
           # Github token for uploading the results
-          github-token: ${{ github.token }}
+#          github-token: ${{ github.token }}
+#
